--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="theme_1">theme-1</string>
     <string name="theme_2">theme-2</string>
     <string name="theme_3">theme-3</string>
+    <string name="select_theme">settings</string>
+    <string name="go_to_site">go to site</string>
 </resources>
